Title: FCMUN website

--- a/index.html
+++ b/index.html
@@ -557,26 +557,10 @@ stimulating crises and facilitating provocative debate in every committee, and p
 
     <footer>
         <div class="container" style="width:1000px;height:400px">
-            <div class="row">
-                <div class="col-sm-4">
-                    <span class="copyright">Made by Hashma Shahid and Yada Pruksachatkun<br>Pictures by Lillie Benowitz<br>&copy 2015 All Rights Reserved</span>
-                </div>
-                <div class="col-sm-4">
-                    <ul class="list-inline social-buttons">
-                        <li><a href="https://www.facebook.com/fcmun?fref=ts"><i class="fa fa-facebook"></i></a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="col-sm-4">
-                    <ul class="list-inline quicklinks">
-                        <li><a href="#"></a>
-                        </li>
-                        <li><a href="#"></a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
+         
+                    <p class="copyright r">Made by Hashma Shahid and Yada Pruksachatkun  Pictures by Lillie Benowitz   &copy 2015 All Rights Reserved</p>
+             
+               </div>
     </footer>
 
     <!-- Portfolio Modals -->
