Title: Changed pictures for the Secretariate

--- a/index.html
+++ b/index.html
@@ -193,9 +193,9 @@ stimulating crises and facilitating provocative debate in every committee, and p
             <div class="row">
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img src="img/team/11.jpg" class="img-responsive img-circle" alt="">
-                        <h4>Siying Chen</h4>
-                        <p class="text-muted2">Secretary General<br>chen35s@mtholyoke.edu</p>
+                        <img src="img/team/1.JPG" class="img-responsive img-circle" alt="">
+                        <h4>Congyi (Kate) Li</h4>
+                        <p class="text-muted2">Secretary General<br>li28c@mtholyoke.edu</p>
                         <ul class="list-inline social-buttons">
                             </li>
                         </ul>
@@ -203,9 +203,9 @@ stimulating crises and facilitating provocative debate in every committee, and p
                 </div>
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img src="img/team/22.jpg" class="img-responsive img-circle" alt="">
-                        <h4>Hashma Shahid</h4>
-                        <p class="text-muted2">Director General<br>shahi22h@mtholyoke.edu</p>
+                        <img src="img/team/2.JPG" class="img-responsive img-circle" alt="">
+                        <h4>Nicole Daphnis</h4>
+                        <p class="text-muted2">Director General: USG of Committees and Summits<br>daphn22n@mtholyoke.edu</p>
                         <ul class="list-inline social-buttons">
                             </li>
                         </ul>
@@ -213,9 +213,9 @@ stimulating crises and facilitating provocative debate in every committee, and p
                 </div>
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img src="img/team/33.jpg" class="img-responsive img-circle" alt="">
-                        <h4>Marwa Mikati</h4>
-                        <p class="text-muted2">USG Committees<br>mikat22m@mtholyoke.edu</p>
+                        <img src="img/team/3.JPG" class="img-responsive img-circle" alt="">
+                        <h4>Aayushi Mishra</h4>
+                        <p class="text-muted2">USG of Committees and Summits<br>mishr23a@mtholyoke.edu</p>
                         <ul class="list-inline social-buttons"> 
                             </li>
                         </ul>
@@ -224,9 +224,9 @@ stimulating crises and facilitating provocative debate in every committee, and p
             <div class="row">
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img src="img/team/44.jpg" class="img-responsive img-circle" alt="">
-                        <h4>Congyi Li</h4>
-                        <p class="text-muted2">USG Committees<br>li28c@mtholyoke.edu</p>
+                        <img src="img/team/4.JPG" class="img-responsive img-circle" alt="">
+                        <h4>Anisha Pai</h4>
+                        <p class="text-muted2">Director of Delegate Affairs<br>pai22m@mtholyoke.edu</p>
                         <ul class="list-inline social-buttons">
                             </li>
                         </ul>
@@ -234,9 +234,9 @@ stimulating crises and facilitating provocative debate in every committee, and p
                 </div>
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img src="img/team/55.jpg" class="img-responsive img-circle" alt="">
-                        <h4>Nicole M</h4>
-                        <p class="text-muted2">Director of Delegate Affairs<br>nmalinow@umass.edu</p>
+                        <img src="img/team/5.JPG" class="img-responsive img-circle" alt="">
+                        <h4>Yewon Lee</h4>
+                        <p class="text-muted2">Director of Committee Operations<br>lee52y@mtholyoke.edu/p>
                         <ul class="list-inline social-buttons">
                             </li>
                         </ul>
@@ -244,9 +244,9 @@ stimulating crises and facilitating provocative debate in every committee, and p
                 </div>
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img src="img/team/66.jpg" class="img-responsive img-circle" alt="">
-                        <h4>Mariam Aamir</h4>
-                        <p class="text-muted2">Director of Publicity<br>aamir22m@mtholyoke.edu</p>
+                        <img src="img/team/6.JPG" class="img-responsive img-circle" alt="">
+                        <h4>Michelle Son</h4>
+                        <p class="text-muted2">Director of Special Events<br>son23m@mtholyoke.edu</p>
                         <ul class="list-inline social-buttons"> 
                             </li>
                         </ul>
@@ -255,9 +255,9 @@ stimulating crises and facilitating provocative debate in every committee, and p
 		<div class="row">
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img src="img/team/77.jpg" class="img-responsive img-circle" alt="">
-                        <h4>Umme Hani</h4>
-                        <p class="text-muted2">Director of Logistics<br>imani22u@mtholyoke.edu</p>
+                        <img src="img/team/7.JPG" class="img-responsive img-circle" alt="">
+                        <h4>Rachel Sul</h4>
+                        <p class="text-muted2">Director of Logistics<br>sul22s@mtholyoke.edu</p>
                         <ul class="list-inline social-buttons">
                             </li>
                         </ul>
@@ -265,25 +265,14 @@ stimulating crises and facilitating provocative debate in every committee, and p
                 </div>
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img src="img/team/88.jpg" class="img-responsive img-circle" alt="">
-                        <h4>Maryam Akbar</h4>
-                        <p class="text-muted2">Business Director<br>akbar22m@mtholyoke.edu</p>
+                        <img src="img/team/8.JPG" class="img-responsive img-circle" alt="">
+                        <h4>Victoria (Weiduo) Cai</h4>
+                        <p class="text-muted2">­­­­­­­­­­­­­­­­­­­­­ Director of Publicity<br>cai23w@mtholyoke.edu</p>
                         <ul class="list-inline social-buttons">
                             </li>
                         </ul>
                     </div>
                 </div>
-                <div class="col-sm-4">
-                    <div class="team-member">
-                        <img src="img/team/99.jpg" class="img-responsive img-circle" alt="">
-                        <h4>Thaen Kannan</h4>
-                        <p class="text-muted2">Director of Events<br>kanna22t@mtholyoke.edu</p>
-                        <ul class="list-inline social-buttons"> 
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-        </div>
     </section>
 
  
